--- a/app/src/main/res/layout/products_list_fragment.xml
+++ b/app/src/main/res/layout/products_list_fragment.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.list.client.ClientListFragment">
+    tools:context=".ui.list.products.ProductsListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_client_list"
+        android:id="@+id/rv_product_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
