estrutura do banco pronta

--- a/app/src/main/res/navigation/list_graph.xml
+++ b/app/src/main/res/navigation/list_graph.xml
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/productRegisterFragment"
-        android:name="com.example.minhalista.ui.register.ProductRegisterFragment"
+        android:name="com.example.minhalista.ui.register.products.ProductRegisterFragment"
         android:label="Produto"
         tools:layout="@layout/product_register_fragment" />
 
