--- a/app/src/main/res/layout/product_register_fragment.xml
+++ b/app/src/main/res/layout/product_register_fragment.xml
@@ -7,10 +7,10 @@
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:padding="15dp"
-    tools:context=".ui.register.ProductRegisterFragment">
+    tools:context=".ui.register.products.ProductRegisterFragment">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_name"
+        android:id="@+id/il_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_name"
+            android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nome"
@@ -28,17 +28,17 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_email"
+        android:id="@+id/il_price"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@id/input_layout_name"
-        app:layout_constraintStart_toStartOf="@id/input_layout_name"
-        app:layout_constraintTop_toBottomOf="@id/input_layout_name">
+        app:layout_constraintEnd_toEndOf="@id/il_name"
+        app:layout_constraintStart_toStartOf="@id/il_name"
+        app:layout_constraintTop_toBottomOf="@id/il_name">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_email"
+            android:id="@+id/et_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Preço"
@@ -47,13 +47,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button_subscriber"
+        android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Cadastrar"
-        app:layout_constraintEnd_toEndOf="@id/input_layout_email"
-        app:layout_constraintStart_toStartOf="@id/input_layout_email"
-        app:layout_constraintTop_toBottomOf="@id/input_layout_email" />
+        app:layout_constraintEnd_toEndOf="@id/il_price"
+        app:layout_constraintStart_toStartOf="@id/il_price"
+        app:layout_constraintTop_toBottomOf="@id/il_price" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
