--- a/app/src/main/res/navigation/list_graph.xml
+++ b/app/src/main/res/navigation/list_graph.xml
@@ -18,6 +18,12 @@
         android:id="@+id/productRegisterFragment"
         android:name="com.example.minhalista.ui.register.products.ProductRegisterFragment"
         android:label="Produto"
-        tools:layout="@layout/product_register_fragment" />
+        tools:layout="@layout/product_register_fragment" >
+        <argument
+            android:name="products"
+            app:argType="com.example.minhalista.data.db.entity.ProductsEntity"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
 
 </navigation>
