estrutura para listar clientes pronta

--- a/app/src/main/res/layout/client_list_fragment.xml
+++ b/app/src/main/res/layout/client_list_fragment.xml
@@ -10,7 +10,8 @@
         android:id="@+id/rv_client_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/client_list_holder"/>
 
     <com.github.clans.fab.FloatingActionMenu
         android:layout_width="match_parent"
