--- a/app/src/main/res/layout/products_list_fragment.xml
+++ b/app/src/main/res/layout/products_list_fragment.xml
@@ -13,6 +13,24 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/products_list_holder"/>
 
+    <com.github.clans.fab.FloatingActionMenu
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        app:menu_backgroundColor="@android:color/transparent"
+        app:menu_colorNormal="#607890"
+        app:menu_colorPressed="#2945fc"
+        app:menu_colorRipple="#3216e2"
+        app:menu_labels_colorNormal="#fff"
+        app:menu_labels_ellipsize="end"
+        app:menu_labels_showShadow="true"
+        app:menu_labels_singleLine="true"
+        app:menu_labels_textColor="#000"
+        app:menu_shadowColor="@android:color/holo_blue_bright"
+        app:menu_showShadow="true">
+
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fb_add"
             android:layout_width="wrap_content"
@@ -28,4 +46,21 @@
             app:fab_showShadow="true"
             android:layout_gravity="bottom|end"/>
 
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/fb_calc"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/ic_add"
+            app:fabSize="mini"
+            app:fab_colorNormal="#367C25"
+            app:fab_colorPressed="#266817"
+            app:fab_label="Calcular"
+            app:fab_shadowColor="#43FD00"
+            app:fab_showShadow="true"
+            android:layout_gravity="bottom|end"/>
+
+    </com.github.clans.fab.FloatingActionMenu>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
