refatorando codigo + criando dialog para exclusão

--- a/app/src/main/res/layout/client_register_fragment.xml
+++ b/app/src/main/res/layout/client_register_fragment.xml
@@ -22,7 +22,7 @@
             android:id="@+id/et_cli_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nome"
+            android:hint="@string/hint_name"
             android:inputType="textCapSentences" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Cadastrar"
+        android:text="@string/register"
         app:layout_constraintEnd_toEndOf="@id/il_cli_name"
         app:layout_constraintStart_toStartOf="@id/il_cli_name"
         app:layout_constraintTop_toBottomOf="@id/il_cli_name" />
