--- a/app/src/main/res/layout/client_list_holder.xml
+++ b/app/src/main/res/layout/client_list_holder.xml
@@ -26,7 +26,8 @@
                 android:layout_weight="70"
                 android:layout_height="0dp"
                 android:textSize="20sp"
-                tools:text="Matheus" />
+                tools:text="Matheus"
+                tools:ignore="NestedWeights" />
 
             <TextView
                 android:id="@+id/tv_cli_date"
