--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:text="Home" />
+        android:text="@string/home" />
 
     <Button
         android:id="@+id/btn_products"
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="20dp"
-        android:text="Produtos"/>
+        android:text="@string/products"/>
 
     <Button
         android:id="@+id/btn_clients"
@@ -27,6 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="20dp"
-        android:text="Clientes"/>
+        android:text="@string/clients"/>
 
 </LinearLayout>
