--- a/app/src/main/res/layout/product_register_fragment.xml
+++ b/app/src/main/res/layout/product_register_fragment.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/et_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nome"
+                android:hint="@string/hint_name"
                 android:inputType="textCapSentences" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -46,7 +46,7 @@
                 android:id="@+id/et_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Preço"
+                android:hint="@string/hint_price"
                 android:inputType="numberDecimal" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -56,7 +56,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Cadastrar"
+            android:text="@string/register"
             app:layout_constraintEnd_toEndOf="@id/il_price"
             app:layout_constraintStart_toStartOf="@id/il_price"
             app:layout_constraintTop_toBottomOf="@id/il_price" />
